[package]
name = "ping-spoofer"
version = "1.2.0"
edition = "2021"
authors = ["Siriusmart <siriusmart@tuta.io>"]
description = "A simple CLI tool that artificially increases your ping systemwide without entering sudo password every time (For Linux only)"
readme = "README.md"
license = "GPL-3.0"
keywords = ["cli", "ping", "spoof", "latency", "linux"]
categories =["command-line-interface", "command-line-utilities"]
repository = "https://github.com/Siriusmart/ping-spoofer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24"
home = "0.5"